--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "qrious": "^4.0.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
