--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "qrious": "^4.0.2",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
