--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "qrious": "^4.0.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuetify": "^3.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
