--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "qrious": "^4.0.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.2",
-    "vuetify": "^3.3.5"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
