--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "core-js": "^3.8.3",
     "qrious": "^4.0.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.2"
+    "vue-qrcode-reader": "^5.5.0",
+    "vue-router": "^4.2.2",
+    "vuetify": "^3.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
